# soundstage

./: .gitignore  PRD.md  README.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/app/core/: config.py
backend/app/routers/: analyze.py  settings.py  trigger.py
backend/app/services/: audio_analyzer.py  audio_capture.py  elevenlabs_service.py
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ConsentDialog.css  ConsentDialog.tsx
frontend/src/pages/: Dashboard.css  Dashboard.tsx  Onboarding.css  Onboarding.tsx  Settings.css  Settings.tsx
